feat(watch-threads): add filter metadata to watch thread listing response
- Add WatchThreadFilterDto with creators and categories filter options
- Enhance WatchThreadSortField with label, defaultDirection, determineDirection, toSortOption
- Add EnrichedWatchThreadData for batch enrichment data
- Build filter metadata from existing batch data (no extra queries)
- Keep filter options focused: creators and categories only (no tags)
- Consistent pattern with Threads, Categories, and Bookmarks
- Frontend gets all filter options in one API call